# Tenzor

./: .gitignore  Dockerfile  LICENSE  README.md  amejorardebate.txt  aniamciones.txt  cli_manual.md  dataset.jsonl  dataset_final.jsonl  generation_config.json  implementation_plan.md  implementationplanrefine.md  logrender.txt  logsrender.txt  plantilla_email_confirmacion.html  provider_research.md  pyproject.toml  refinamiento.md  requirements.txt  setup.ps1  setup.sh  supabase_model_lifecycle_state.sql  test_request.py  train_deploy_qwen14b_v6.py
app/: __init__.py  config.py  db.py  main.py  models.py  models_platform.py
app/middleware/: auth.py  platform_auth_middleware.py
app/prompts/: system_prompt.py
app/routers/: admin.py  chat.py  crew.py  endpoints.py  platform_agents.py  platform_auth.py  (+6 more)
cli/: __init__.py  arzor.py  tenzor_crew.py
tests/: buscar_modelo.py  chat_interactivo.py  check_models.py  checkbucket.py  checkready.py  checkusstatus.py  clean_dataset.py  dataset_clean.jsonl  deploy_endpoiny.py  deploy_qwen14b_vertex_v3.py  diagnostico_avanzado.py  dump_raw_logs.py  endpoint_err_logs.py  finetune_tenzor.py  monitor_de_vertex_ai_optimizado.py  monitor_endpoint_deploy.py  monitor_endpointv2.py  optimizador_de_dataset.py  test_aft_compiler.py  test_agent_cache.py  test_chat.py  test_cli_agent.py  test_crew.py  test_platform_agents.py  test_platform_auth.py  test_platform_chat_service.py  test_platform_knowledge.py  test_provider_router.py  test_rag.py  test_round_table.py  tokenization.py  tokenizer.py  train_deploy_qwen14b_v6.py  verify_rag.py
(+28 files in other folders)
